--- a/.editorconfig
+++ b/.editorconfig
@@ -8,9 +8,12 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.html]
+indent_size = 4
+quote_type = double
+
 [*.ts]
 quote_type = single
-ij_typescript_use_double_quotes = false
 
 [*.md]
 max_line_length = off
